# src/api/swagger.yaml
@@ -381,6 +381,82 @@ paths:
       security:
         - Bearer: []
       x-swagger-router-controller: "Permissions"
+  /voting:
+    post:
+      tags:
+        - "voting"
+      summary: "Create voting"
+      description: "Owner can create voting on file"
+      operationId: "createVoting"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/voting"
+      responses:
+        "201":
+          description: "Succesefully created"
+        "203":
+          description: "Not Authorized"
+        "403":
+          description: "User does not have permissions"
+        "404":
+          description: "File not exist"
+        "422":
+          description: "Invalid data supplied"
+      security:
+        - Bearer: []
+      x-swagger-router-controller: "FileSystem"
+    put:
+      tags:
+        - "voting"
+      summary: "User vote"
+      description: "User can vote in file if have permissions"
+      operationId: "updateVoting"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/vote"
+      responses:
+        "200":
+          description: "Succesefully vote"
+        "203":
+          description: "Not Authorized"
+        "403":
+          description: "User does not have permissions"
+        "409":
+          description: "User already voted"
+        "422":
+          description: "Invalid data"
+      security:
+        - Bearer: []
+      x-swagger-router-controller: "Voting"
+    get:
+      tags:
+        - "voting"
+      summary: "Get voting list"
+      description: "User can get voting list of owned files or shared files"
+      operationId: "getVoting"
+      produces:
+        - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Voting list"
+        "203":
+          description: "Not Authorized"
+        "422":
+          description: "Invalid data"
+      security:
+        - Bearer: []
+      x-swagger-router-controller: "Voting"
 securityDefinitions:
   Bearer:
     type: "apiKey"
@@ -445,3 +521,21 @@ definitions:
         enum:
           - "unwrite"
           - "unread"
+  vote:
+    properties:
+      variant:
+        type: "string"
+  voting:
+    properties:
+      hash:
+        type: "string"
+      cid:
+        type: "string"
+      dueDate:
+        type: "string"
+      variants:
+        type: "string"
+      excludedUsers:
+        type: "string"
+      decription:
+        type: "string"
